[package]
name = "exopenssl"
version = "0.1.0"
authors = []

[lib]
name = "exopenssl"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
rustler = "0.15.1"
rustler_codegen = "0.15.1"
lazy_static = "0.2"
openssl = { git = "https://github.com/jshmrtn/rust-openssl.git", branch = "feature/pkcs7" }
